--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,9 +3,26 @@ jobs:
   build:
     docker:
       - image: circleci/node:10
+    
+    working_directory: ~/repo
+
     branches:
       only:
         - master
+
     steps:
       - checkout
-      - run: echo "A first hello"
+      
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+
+      - run: yarn install
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
